# CI2026-StarterKit

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  pyproject.toml
.brev/: setup.sh  start.sh
configs/: forecast.yaml  train.yaml
configs/data/: default.yaml
configs/experiments/: baseline_mlp.yaml  baseline_parametric.yaml  baseline_sundquist.yaml  geounet_all.yaml  geounet_wide_rh_hilr.yaml  geounet_winner.yaml  mlp_no_rh.yaml  mlp_no_rh_aux2.yaml  mlp_no_rh_aux5.yaml  mlp_rh.yaml  mlp_rh_aux2.yaml  mlp_rh_aux5.yaml  segformer.yaml  segformer_b2_rh.yaml  unet.yaml  unet_brute.yaml  unet_brute_aux.yaml  unet_brute_baseline.yaml  unet_brute_big_batch.yaml  unet_brute_deep.yaml  unet_brute_followup.yaml  unet_brute_wide.yaml  unet_brute_wide_aux5.yaml  unet_brute_wind.yaml  unet_brute_xlarge.yaml  unet_geounet.yaml  unet_hpo.yaml  unet_no_rh.yaml  unet_no_rh_aux2.yaml  unet_no_rh_aux5.yaml  unet_rh.yaml  unet_rh_aux2.yaml  unet_rh_aux5.yaml
configs/hydra/: default.yaml
configs/model/: geounet.yaml  mlp.yaml  parametric.yaml  segformer.yaml  sundquist.yaml  unet.yaml
configs/model_configs/: geounet.yaml  geounet_hilr.yaml  geounet_wide.yaml  geounet_wide_full.yaml  geounet_wide_noise.yaml  geounet_wide_rh.yaml  geounet_wide_rh_drh.yaml  geounet_wide_rh_drh_theta.yaml  geounet_wide_rh_flat.yaml  geounet_wide_rh_hilr.yaml  geounet_wide_rh_light_mask.yaml  geounet_wide_rh_mask_sched.yaml  geounet_wide_rh_shear.yaml  geounet_wide_rh_theta.yaml  geounet_wide_shear.yaml  segformer_b0_rh.yaml  segformer_b2.yaml  segformer_b2_rh.yaml  segformer_b2_rh_scratch.yaml  segformer_b3_rh.yaml
configs/run_sets/: unet_brute.yaml  (+3 more)
notebooks/: inspect_train_val_data.ipynb  normalization-analysis.ipynb  normalization_analysis.ipynb  training_monitoring.ipynb  visualize_inputs_and_predictions.ipynb  viz-inputs-and-predictions.ipynb
scripts/: compute_normalization.py  evaluate.py  forecast.py  submit.py  train.py
starter_kit/: __init__.py  data.py  layers.py  model.py  model_edit.py
(+18 files in other folders)
